Simplify MCP LLM E2E test coverage
- consolidate LLM validation into four autonomous HTTP scenarios
- remove guided and duplicated conversation harness code
- parallelize LLM scenarios and streamline model readiness checks
- add MCP transport timeouts and logging conformance coverage